# co2-products

./: .gitignore  CITATION.cff  README.md  notebook.ipynb  pyproject.toml  testing.ipynb
.github/workflows/: deploy.yml  google-sheet-build.yaml  manual-build.yaml  manual-update.yaml  process-sheet-update.yaml  static-html-deploy.yml
docs/: data.xlsx  index.html  scripts.js  styles.css
src/: filters.py  generate_page.py  google_sheet.py
src/co2_synthesis/: __init__.py  cli.py  config.py  filters.py  generate_page.py  google_sheet.py  images.py
src/google_scripts/: README.md  github_trigger.js  sheets_functions.js  sheets_menu_github.js
static/: scripts.js  styles.css
static/templates/: data-card.html  sidebar.html  template.html
